fix🐛: overflow issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,4 +5,5 @@
 * {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+    overflow: hidden;
 }
